--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -1,3 +1,5 @@
 <footer class="site-footer">
   <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
+  <a href="auth.html">Login</a>
 </footer>
+
