--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -1,6 +1,10 @@
 <footer class="site-footer">
-  <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
   <a href="auth.html">Login</a>
+  <a href="index.html">Home</a>
+  <a href="leaderboard.html">Leaderboard</a>
+  <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
+  
 </footer>
+
 
 
