--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -1,10 +1,11 @@
 <footer class="site-footer">
-  <a href="auth.html">Login</a>
-  <a href="index.html">Home</a>
-  <a href="leaderboard.html">Leaderboard</a>
+  <a href="index.html" style="color:#fff;">Home</a>
+  <a href="auth.html" style="color:#fff;">Login</a>
+  <a href="leaderboard.html" style="color:#fff;">Leaderboard</a>
   <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
   
 </footer>
+
 
 
 
