--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -3,8 +3,9 @@
   <a href="auth.html" style="color:#fff;">Login</a>
   <a href="leaderboard.html" style="color:#fff;">Leaderboard</a>
   <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
-  
+  <p>Gambling Hotline: 1-800-522-4700</p>
 </footer>
+
 
 
 
