--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -3,5 +3,6 @@
   <a href="auth.html" style="color:#fff;">Login</a>
   <a href="leaderboard.html" style="color:#fff;">Leaderboard</a>
   <p>&copy; 2025 Phantom Picks. All rights reserved.</p>
-  <p>Gambling Problem: 1-800-522-4700</p>
+  <a href="https://www.ncpgambling.org/help-treatment/about-the-national-problem-gambling-helpline/" style="color:#fff";>Gambling Problem: 1-800-522-4700</a>
 </footer>
+
