--- a/assets/partials/header.html
+++ b/assets/partials/header.html
@@ -11,7 +11,7 @@
     <span class="divider" role="presentation"></span>
     <a href="nfl.html">NFL</a>
     <span class="divider" role="presentation"></span>
-    <a href="sec.html">SEC</a>
+    <a href="sec.html">CFB</a>
     <span class="divider" role="presentation"></span>
     <a href="leaderboard.html">Leaderboard</a>
   </nav>
@@ -26,3 +26,4 @@
     <!-- If logged in later, swap text to “Account” -->
   </div>
 </header>
+
